Unified CLI & Web App

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "bin": "src/cli.js",
   "scripts": {
+    "cli": "node src/cli.js",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
