--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "apify-web-runner",
+  "name": "apify-simple",
   "version": "0.1.0",
   "private": true,
   "type": "module",
@@ -7,7 +7,7 @@
   "scripts": {
     "cli": "node src/cli.js",
     "dev": "vite",
-    "build": "vite build --base=/apify-web-runner/",
+    "build": "vite build --base=/apify-simple/",
     "preview": "vite preview"
   },
   "dependencies": {
